<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">环保助手</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">epbot</string>
    <string name="all_rights_reserved">Copyright © 2012-2015 way. All Rights Reserved.</string>
<!-- ui -->
    <string name="weacherTxt">天气</string>
    <string name="lookTxt">看看</string>
    <string name="fountTxt">发现</string>
    <string name="mineTxt">我的</string>

    <string name="value_weacher">多云</string>
    <string name="lb_templ">C</string>
    <string name="value_templ">37</string>
    <string name="net_error">网络连接失败</string>
</resources>
