<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <FrameLayout
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="0.8dp"
        android:layout_weight="1" >
    </FrameLayout>

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="@dimen/siztdot5"
        android:id="@+id/lineBottom"
        android:background="@color/gray" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:background="@android:color/transparent">

        <RelativeLayout
            android:id="@+id/weacherLayout"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@android:color/transparent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:orientation="vertical"
                android:background="@android:color/transparent">

                <ImageView
                    android:id="@+id/weacherImg"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/ic_tabbar_course_normal" />

                <TextView
                    android:id="@+id/weacherTxt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/weacherTxt"
                    style="@style/mainTabBottom"
                    android:textSize="@dimen/size20" />
            </LinearLayout>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/lookLayout"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@android:color/transparent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:orientation="vertical" >

                <ImageView
                    android:id="@+id/lookImg"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/ic_tabbar_found_normal" />

                <TextView
                    android:id="@+id/lookTxt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/lookTxt"
                    style="@style/mainTabBottom"
                    android:textSize="@dimen/size20" />
            </LinearLayout>
        </RelativeLayout>


        <RelativeLayout
            android:id="@+id/foundLayout"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@android:color/transparent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:orientation="vertical" >

                <ImageView
                    android:id="@+id/foundImg"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/ic_tabbar_settings_normal" />

                <TextView
                    android:id="@+id/foundTxt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/fountTxt"
                    style="@style/mainTabBottom"
                    android:textSize="@dimen/size20" />
            </LinearLayout>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/mineLayout"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@android:color/transparent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:orientation="vertical" >

                <ImageView
                    android:id="@+id/mineImg"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/ic_tabbar_settings_normal" />

                <TextView
                    android:id="@+id/mineTxt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/mineTxt"
                    style="@style/mainTabBottom"
                    android:textSize="@dimen/size20" />
            </LinearLayout>
        </RelativeLayout>


    </LinearLayout>
</LinearLayout>  