<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/swipe_container"
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:background="@drawable/bg">
    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:id="@+id/scrollRoot"
        android:scrollbars="none" >
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"

            android:id="@+id/layoutRoot"
            android:background="@android:color/transparent">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/layoutTime"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="5dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/layoutTimeC"
                    android:gravity="center_horizontal"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="绍兴"
                        android:id="@+id/txtLoaction"
                        android:layout_centerHorizontal="true"
                        style="@style/whiteText"
                        android:textSize="@dimen/size30" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="2016-02-01 周一 腊月 初六"
                        android:id="@+id/txtTime"
                        android:layout_centerHorizontal="true"
                        style="@style/whiteText"
                        android:textSize="@dimen/size30" />
                </LinearLayout>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="190dp"
                android:id="@+id/layoutCenter"
                android:layout_centerHorizontal="true"
                android:layout_below="@+id/layoutTime"></RelativeLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/layoutToday"
                android:layout_below="@+id/layoutCenter">

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="250px"
                    android:layout_height="wrap_content"
                    android:id="@+id/layoutTemperature"
                    android:layout_marginLeft="10dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:id="@+id/layoutWeacher"
                        android:gravity="center_vertical">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/imgWeacher"
                            android:background="@drawable/d01" />

                        <TextView
                            android:id="@+id/txtWeacherName"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="5dp"
                            android:text="@string/value_weacher"
                            style="@style/whiteText"
                            android:layout_centerVertical="true"
                            android:textSize="@dimen/size40" />
                    </LinearLayout>

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:id="@+id/layoutTemperatureC"
                        android:layout_weight="1">

                        <TextView
                            style="@style/whiteText"
                            android:id="@+id/txtTemperature"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/value_templ"
                            android:layout_centerVertical="true"
                            android:textSize="@dimen/size120" />

                        <TextView
                            style="@style/whiteText"
                            android:id="@+id/lbTemperature"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/lb_templ"
                            android:textSize="@dimen/size40"
                            android:layout_toRightOf="@+id/txtTemperature" />

                    </RelativeLayout>

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="60px"
                        android:id="@+id/layoutDetail"
                        android:layout_centerHorizontal="true"
                        android:layout_below="@+id/layoutToday">

                        <TextView
                            style="@style/whiteText"
                            android:id="@+id/txtContent"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="PM 80 湿 80"
                            android:layout_centerVertical="true"
                            android:textSize="@dimen/size40" />
                    </RelativeLayout>

                </LinearLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"></RelativeLayout>

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:id="@+id/layoutOperation"
                    android:layout_marginRight="10dp">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:id="@+id/relativeLayout"
                        android:gravity="center_horizontal" >

                        <ImageView
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:id="@+id/imageView"
                            android:src="@drawable/d06"
                            android:layout_centerHorizontal="true"
                            android:layout_alignParentBottom="true"
                            android:layout_marginBottom="10dp" />

                    </RelativeLayout>
                </LinearLayout>
            </LinearLayout>

            <TextView
                android:layout_width="700px"
                android:layout_height="1px"
                android:id="@+id/txtLine"
                android:layout_below="@+id/layoutToday"
                android:background="@color/white"
                android:layout_centerHorizontal="true" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/layoutBottom"
                android:layout_alignParentBottom="false"
                android:layout_centerHorizontal="true"
                android:layout_below="@+id/layoutToday">

                <com.its.xfweacher.ui.uc.HorizontalListView
                    android:layout_width="fill_parent"
                    android:layout_height="180dp"
                    android:id="@+id/listView">

                </com.its.xfweacher.ui.uc.HorizontalListView>
            </RelativeLayout>

        </RelativeLayout>
    </ScrollView>
</android.support.v4.widget.SwipeRefreshLayout>


